fixed bug where not showing courses that can be registered for when clicked

--- a/components/dashboard/dashboard.component.css
+++ b/components/dashboard/dashboard.component.css
@@ -17,5 +17,10 @@ div{
 }
 
 #student-info{
-    height: 200px;
+    height: 250px;
+}
+
+#student-courses {
+    height: inherit;
+    overflow: auto;
 }
